--- a/Abschlussarbeit.html
+++ b/Abschlussarbeit.html
@@ -64,7 +64,8 @@
                     <input type="text" id="pictureName" name="pictureName" placeholder="Mame your picture">
                     <input type="submit" id="pictureCta" value="Save picture">
                 </form>
-            </div>
+                <div id="clearPicture">Clear the pricture</div>
+            </div> 
         </div>
     </div>
 </body>
