--- a/Abschlussarbeit.html
+++ b/Abschlussarbeit.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abschlussarbeit</title>
     <script src="Canvas.js"></script>
+    <script src="Vector.js"></script>
     <script src="Symbols.js"></script>
     <script src="Star.js"></script>
     <script src="Circle.js"></script>
