--- a/Abschlussarbeit.html
+++ b/Abschlussarbeit.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div id="outerContainer">
-        <h1>Design your magical picture</h1>
+        <h1>Design your magical picture!</h1>
         <div id="gridContainer">
             <div id="leftContainer">
                 <div id="canvasContainer">
